--- a/css/styles.css
+++ b/css/styles.css
@@ -66,11 +66,13 @@ main {
     display: flex;
     margin: 40px;
     overflow: scroll;
+    position: relative;
 }
 
 .slides, img {
     width: 200px;
     height: 200px;
+
 }
 
 .podium {
@@ -79,12 +81,43 @@ main {
     justify-content: center;
 }
 
+.podium-box {
+    margin: 10px;
+    display: flex;
+}
+
+.second {
+    margin: 15px;
+    height: 100px;
+    background-color: #FF1901;
+    color: #ffffff;
+    text-align: center;
+}
+
+.first {
+    margin: 15px;
+    height: 150px;
+    background-color: #FF1901;
+    color: #ffffff;
+    text-align: center;
+}
+
+.third {
+    margin: 15px;
+    height: 75px;
+    background-color: #FF1901;
+    color: #ffffff;
+    text-align: center;
+}
+
 .rest {
     display: grid;
     justify-content: center;
     margin-top: 10px;
+    
 }
 
 .rest, li{
     margin-top: 10px;
+    color: black;
 }
