--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,13 @@ main {
     position: relative;
 }
 
+.slides {
+    position: relative;
+}
+
 .slides, img {
     width: 200px;
     height: 200px;
-
 }
 
 .podium {
