--- a/css/contact.css
+++ b/css/contact.css
@@ -9,12 +9,20 @@ html {
 }
 
 header {
-    display: flex;
+    display: grid;
     justify-content: center;
     padding-top: 20px;
     padding-bottom: 5px;
     color: white;
     background-color: #FF1901;
+}
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.logo {
+    margin: 20px;
 }
 
 .logo, h1 {
@@ -23,19 +31,21 @@ header {
 
 .navbar, ul{
     list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
 }
 
 .navbar, li{
-    display: inline;
-    color: #FF1901;
+    margin: 5px;
+    text-decoration: none;
 }
 
-.navbar, li a:hover {
-    background-color: white;
-  }
+.navbar a :hover{
+    background-color:white;
+    text-decoration: none;
+}
+
 
 
 label { 
