--- a/css/blogs.css
+++ b/css/blogs.css
@@ -9,12 +9,20 @@ html {
 }
 
 header {
-    display: flex;
+    display: grid;
     justify-content: center;
     padding-top: 20px;
     padding-bottom: 5px;
     color: white;
     background-color: #FF1901;
+}
+.meny {
+    text-decoration: none;
+    color: white;
+}
+
+.logo {
+    margin: 20px;
 }
 
 .logo, h1 {
@@ -23,19 +31,20 @@ header {
 
 .navbar, ul{
     list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
 }
 
 .navbar, li{
-    display: inline;
-    color: #FF1901;
+    margin: 5px;
+    text-decoration: none;
 }
 
-.navbar, li a:hover {
-    background-color: white;
-  }
+.navbar a :hover{
+    background-color:black;
+    text-decoration: none;
+}
 
 
   main {
@@ -43,11 +52,47 @@ header {
     flex-direction: row;
     justify-content: center;
     background-color: #ffffff;
-    background-attachment: fixed;  
-    background-size: cover;
+    margin: 20px;
 }
 
+.head {
+    display: grid;
+    justify-content: center;
+    margin: 20px;
+}
 
-  .allBlogs, img{
-    width: 50%;
+.allBlogs{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+}
+.all {
+    margin: 20px;
+    width: 500px;
+}
+
+img{
+    width: 400px;
+    height: 300px;
   }
+
+  h2 {
+      display: flex;
+      justify-content: center;
+  }
+
+  a {
+      text-decoration: none;
+      color: black;
+  }
+
+  footer {
+    background-color: black;
+    margin-top: 125px;
+}
+
+.fot {
+    color: white;
+    margin: 20px;
+    text-decoration: none;
+}
