--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,12 @@ main {
     background-size: cover;
 }
 
+
+h3 {
+    display: grid;
+    justify-content: center;
+}
+
 .headline {
     display: grid;
     justify-content: center;
@@ -90,7 +96,8 @@ main {
     margin: 40px;
     display: grid;
     justify-content: center;
-    
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(225, 6, 0) 0px 0px 0px 3px;
+    border-radius: 5px;
 }
 
 .podium-box {
@@ -139,6 +146,7 @@ main {
     display: grid;
     justify-content: center;
     margin-top: 10px;
+    background-color: #38383F;
     
 }
 
