--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ h3 {
     margin: 15px;
     height: 150px;
     width: 150px;
-    background: linear-gradient(to top, black 55%, white 45%);
+    background: linear-gradient(to top, #38383F 55%, white 45%);
     color: #ffffff;
     text-align: center;
 }
@@ -123,7 +123,7 @@ h3 {
     margin: 15px;
     height: 150px;
     width: 150px;
-    background: linear-gradient(to top, black 75%, white 25%);
+    background: linear-gradient(to top, #38383F 75%, white 25%);
     color: #ffffff;
     text-align: center;
 }
@@ -132,7 +132,7 @@ h3 {
     margin: 15px;
     height: 150px;
     width: 150px;
-    background: linear-gradient(to top, black 50%, white 50%);
+    background: linear-gradient(to top, #38383F 50%, white 50%);
     color: #ffffff;
     text-align: center;
 }
