--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,19 @@ h3 {
     margin: 20px;
 }
 
-.blog, img{
+.karusel {
+    width: 800px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.blog {
+    display: flex;
+    width: 100%;
+    height: 200px;
+}
+
+/* .blog, img{
     width: 100%;
 }
 
@@ -85,12 +97,12 @@ h3 {
 
 .slides {
     position: relative;
-}
+}*/
 
 .slides, img {
     width: 200px;
     height: 200px;
-}
+} 
 
 .podium {
     margin: 40px;
