--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,11 @@ header {
     background-color: #FF1901;
 }
 a {
+    display: grid;
+    justify-content: center;
     text-decoration: none;
-    color: white;
+    color: black;
+    margin-top: 5px;
 }
 
 .logo {
@@ -82,7 +85,7 @@ h3 {
 .blog {
     display: flex;
     width: 100%;
-    height: 200px;
+    height: 400px;
 }
 
 #prevBtn {
@@ -112,9 +115,10 @@ h3 {
     margin-right: 13px;
 } 
 
+
+
 fieldset {
     border-color: #FF1901;
-    border-width: 3px;
     margin: 40px;
     border-radius: 5px;
     border-left: none;
