--- a/css/about.css
+++ b/css/about.css
@@ -58,11 +58,22 @@ main {
     background-size: cover;
 }
 
+fieldset {
+    margin: 40px;
+    border: 5px solid #FF1901;
+    border-radius: 5px;
+    border-left: none;
+}
+
+legend {
+    font-size: xx-large;
+    color: #FF1901;
+}
+
 .om {
     display: flex;
     justify-content: center;
     margin: 40px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(225, 6, 0) 0px 0px 0px 3px;
     border-radius: 5px;
     margin: 80px;
 }
