--- a/css/contact.css
+++ b/css/contact.css
@@ -47,8 +47,8 @@ a {
 }
 
 main {
-    display: grid;
-    justify-content: center;
+    /* display: grid;
+    justify-content: center; */
     margin: 100px;
     margin-top: 100px;
     background-color: #ffffff;
@@ -72,9 +72,26 @@ h2 {
     justify-content: center;
 }
 
+fieldset {
+    margin: 40px;
+    border: 5px solid #FF1901;
+    border-radius: 5px;
+    border-left: none;
+}
+
+legend {
+    font-size: xx-large;
+    color: #FF1901;
+}
+
+.forum{
+    display: flex;
+    justify-content: center;
+}
 
 form {
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(225, 6, 0) 0px 0px 0px 3px;
+    display: flex;
+    justify-content: center;
     border-radius: 5px;
     height: 550px;
     width: 700px;
@@ -82,6 +99,7 @@ form {
 }
 
 .contact {
+    margin-bottom: 10px;
     background-color: #38383F;
 }
 
@@ -97,7 +115,7 @@ form > div {
     margin-left: 10px;
 }
 
-.txt > input {
+.txt > textarea {
     height: 150px;
     width: 300px;
     margin-top: 20px;
