--- a/css/blogs.css
+++ b/css/blogs.css
@@ -8,7 +8,7 @@ html {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-header {
+/* header {
     display: grid;
     justify-content: center;
     padding-top: 20px;
@@ -44,9 +44,67 @@ header {
 .navbar a :hover{
     background-color:black;
     text-decoration: none;
+} */
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: #FF1901;
 }
 
+.logo {
+    color: #e2e0e0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 22px;
+}
 
+.logo a {
+    text-decoration: none;
+    color: #e2e0e0;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 35%;
+}
+
+.nav-links li {
+    list-style: none;
+}
+
+.nav-links a {
+    color: #e2e0e0;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+
+.burger {
+    display: none;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: #e2e0e0;
+    margin: 5px;
+}
+
+fieldset {
+    border: 5px solid #FF1901;
+    margin: 40px;
+    border-radius: 8px;
+    border-left: none;
+}
+
+legend {
+    font-size: xx-large;
+    color: #FF1901;
+}
   main {
     display: flex;
     flex-direction: row;
@@ -65,16 +123,23 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
+    
 }
 .all {
     margin: 20px;
-    width: 500px;
+    width: 510px;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    border-radius: 8px;
 }
 
-img{
-    width: 400px;
-    height: 300px;
-  }
+.all img {
+    display: flex;
+    justify-content: center;
+    width: 500px;
+    height: 400px;
+    margin: 5px;
+    border-radius: 8px;
+}
 
 h2 {
     display: flex;
@@ -89,6 +154,20 @@ a {
 .btn {
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
+}
+
+
+button {
+    width: 100px;
+    height: 25px;
+    border-bottom: none;
+    border-left: none;
+    border-radius: 8px;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 footer {
@@ -100,4 +179,89 @@ footer {
     color: white;
     margin: 20px;
     text-decoration: none;
+}
+
+
+
+/* tablet */
+
+@media screen and (max-width:1024px){
+
+    body{
+        overflow-x: hidden;
+    }
+
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #FF1901;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    } 
+
+    .nav-links li{
+        opacity: 0;
+    }
+
+    .burger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .allBlogs{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        
+    }
+
+    .all {
+        margin: 20px;
+        width: 210px;
+        box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+        border-radius: 8px;
+    }
+
+    .all img {
+        display: flex;
+        justify-content: center;
+        width: 200px;
+        height: 100px;
+        margin: 5px;
+        border-radius: 8px;
+    }
+}
+    
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}  
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
 }
