--- a/css/details.css
+++ b/css/details.css
@@ -8,7 +8,7 @@ html {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-header {
+/* header {
     display: grid;
     justify-content: center;
     padding-top: 20px;
@@ -45,6 +45,55 @@ a {
 .navbar a :hover{
     background-color: black;
     text-decoration: none;
+} */
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: #FF1901;
+}
+
+.logo {
+    color: #e2e0e0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 22px;
+}
+
+.logo a {
+    text-decoration: none;
+    color: #e2e0e0;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 35%;
+}
+
+.nav-links li {
+    list-style: none;
+}
+
+.nav-links a {
+    color: #e2e0e0;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+
+.burger {
+    display: none;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: #e2e0e0;
+    margin: 5px;
+    cursor: pointer;
 }
 
 .blog {
@@ -90,3 +139,72 @@ footer {
     text-decoration: none;
 }
 
+/* tablet */
+
+@media screen and (max-width:1024px){
+
+    body{
+        overflow-x: hidden;
+    }
+
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #FF1901;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    } 
+
+    .nav-links li{
+        opacity: 0;
+    }
+
+    .burger {
+        display: block;
+    }
+
+    .allBlogs{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        
+    }
+
+    .all {
+        margin: 20px;
+        width: 210px;
+        box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+        border-radius: 8px;
+    }
+
+    .all img {
+        display: flex;
+        justify-content: center;
+        width: 200px;
+        height: 100px;
+        margin: 5px;
+        border-radius: 8px;
+    }
+}
+    
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}  
