--- a/css/styles.css
+++ b/css/styles.css
@@ -8,46 +8,52 @@ html {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-header {
-    display: grid;
-    justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 5px;
-    color: white;
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
     background-color: #FF1901;
-}
-a {
-    display: grid;
-    justify-content: center;
-    text-decoration: none;
-    color: black;
-    margin-top: 5px;
 }
 
 .logo {
-    margin: 20px;
+    color: #e2e0e0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 22px;
 }
 
-.logo, h1 {
-    font-size: xx-large;
+.logo a {
+    text-decoration: none;
+    color: #e2e0e0;
 }
 
-.navbar, ul{
-    list-style: none;
+.nav-links {
     display: flex;
-    justify-content: center;
-    text-decoration: none;
+    justify-content: space-around;
+    width: 35%;
 }
 
-.navbar, li{
+.nav-links li {
+    list-style: none;
+}
+
+.nav-links a {
+    color: #e2e0e0;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+
+.burger {
+    display: none;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: #e2e0e0;
     margin: 5px;
-    color: white;
-    text-decoration: none;
-}
-
-.navbar a :hover{
-    background-color:black;
-    text-decoration: none;
 }
 
 
@@ -63,20 +69,20 @@ main {
     background-size: cover;
 }
 
-
-h3 {
-    display: grid;
-    justify-content: center;
-}
-
 .headline {
     display: grid;
     justify-content: center;
     margin: 20px;
 }
 
+h3 {
+    display: grid;
+    justify-content: center;
+    margin: 10px 0 10px 0;
+}
+
 .karusel {
-    width: 1700px;
+    width: 1706px;
     height: 600px;
     margin: auto;
     overflow: hidden;
@@ -94,7 +100,7 @@ h3 {
     position: absolute;
     top: 40%;
     z-index: 10;
-    left: -5%;
+    left: -6.5%;
     font-size: 30px;
     cursor: pointer;
 }
@@ -104,7 +110,7 @@ h3 {
     position: absolute;
     top: 40%;
     z-index: 10;
-    right: -5.1%;
+    right: -7.1%;
     font-size: 30px;
     cursor: pointer;
 }
@@ -113,7 +119,7 @@ h3 {
 .arrow {
     width: 400px;
     height: 400px;
-    margin-right: 13px;
+    /* margin-right: 13px; */
 } 
 
 .slides img {
@@ -128,6 +134,13 @@ h3 {
     border-radius: 8px;
     margin: 5px;
     height: 450px;
+}
+
+.slides a {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
 }
 
 
@@ -228,4 +241,87 @@ footer {
     color: white;
     margin: 20px;
     text-decoration: none;
+}
+
+/* tablet */
+
+@media screen and (max-width:1024px){
+
+    body{
+        overflow-x: hidden;
+    }
+
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #FF1901;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    } 
+
+    .nav-links li{
+        opacity: 0;
+    }
+
+    .burger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .allBlogs{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        
+    }
+
+    .all {
+        margin: 20px;
+        width: 210px;
+        box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+        border-radius: 8px;
+    }
+
+    .all img {
+        display: flex;
+        justify-content: center;
+        width: 200px;
+        height: 100px;
+        margin: 5px;
+        border-radius: 8px;
+    }
+}
+    
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}  
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
 }
