--- a/css/blogs.css
+++ b/css/blogs.css
@@ -8,44 +8,6 @@ html {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-/* header {
-    display: grid;
-    justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 5px;
-    color: white;
-    background-color: #FF1901;
-}
-.meny {
-    text-decoration: none;
-    color: white;
-}
-
-.logo {
-    margin: 20px;
-}
-
-.logo, h1 {
-    font-size: xx-large;
-}
-
-.navbar, ul{
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-}
-
-.navbar, li{
-    margin: 5px;
-    text-decoration: none;
-}
-
-.navbar a :hover{
-    background-color:black;
-    text-decoration: none;
-} */
-
 nav {
     display: flex;
     justify-content: space-around;
@@ -171,14 +133,31 @@ button:hover {
 }
 
 footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
     background-color: black;
-    margin-top: 125px;
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.fot a {
+    color: #e2e0e0;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: bold;
 }
 
 .fot {
     color: white;
     margin: 20px;
     text-decoration: none;
+    list-style: none;
+    
 }
 
 
