--- a/css/about.css
+++ b/css/about.css
@@ -78,6 +78,7 @@ fieldset {
 legend {
     font-size: xx-large;
     color: #FF1901;
+    padding-right: 20px;
 }
 
 .om {
@@ -185,6 +186,13 @@ footer {
     
 .nav-active {
     transform: translateX(0%);
+    position: fixed;
+    
+}
+
+.noScroll {
+    height: 100%;
+    overflow: hidden;
 }
 
 @keyframes navLinkFade {
