--- a/css/details.css
+++ b/css/details.css
@@ -74,6 +74,7 @@ fieldset {
 legend {
     font-size: xx-large;
     color: #FF1901;
+    padding-right: 20px;
 }
 
 img {
@@ -184,6 +185,11 @@ footer {
     
 .nav-active {
     transform: translateX(0%);
+}
+
+.noScroll {
+    height: 100%;
+    overflow: hidden;
 }
 
 @keyframes navLinkFade {
