--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ main {
 h3 {
     display: grid;
     justify-content: center;
-    margin: 10px 0 10px 0;
+    margin: 5px 0 5px 0;
 }
 
 .karusel {
@@ -152,6 +152,7 @@ fieldset {
 legend {
     font-size: xx-large;
     color: #FF1901;
+    padding-right: 20px;
 }
 
 
@@ -175,7 +176,7 @@ legend {
 
 .second {
     margin: 15px;
-    height: 250px;
+    height: 280px;
     width: 250px;
     background: linear-gradient(to top, #38383F 55%, white 45%);
     color: #ffffff;
@@ -184,7 +185,7 @@ legend {
 
 .first {
     margin: 15px;
-    height: 250px;
+    height: 280px;
     width: 250px;
     background: linear-gradient(to top, #38383F 75%, white 25%);
     color: #ffffff;
@@ -193,7 +194,7 @@ legend {
 
 .third {
     margin: 15px;
-    height: 250px;
+    height: 280px;
     width: 250px;
     background: linear-gradient(to top, #38383F 50%, white 50%);
     color: #ffffff;
@@ -318,6 +319,11 @@ footer {
 .nav-active {
     transform: translateX(0%);
     z-index: 1;
+}
+
+.noScroll {
+    height: 100%;
+    overflow: hidden;
 }
 
 
