--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,8 @@ h3 {
     height: 500px;
     margin: auto;
     overflow: hidden;
+    position: relative;
+
 }
 
 .blog {
@@ -98,24 +100,28 @@ h3 {
     height: 40px;
     position: absolute;
     top: 30%;
-    left: 4%;
+    left: 0;
     font-size: 30px;
     cursor: pointer;
+    z-index: 1;
 }
 
 #nextBtn {
     height: 40px;
     position: absolute;
     top: 30%;
-    right: 4%;
+    right: 0;
     font-size: 30px;
     cursor: pointer;
+    z-index: 1;
 }
 
 
 .arrow {
-    width: 400px;
     height: 400px;
+    background-color: #5e5d5d56;
+    
+    
 } 
 
 .slides img {
@@ -261,7 +267,7 @@ footer {
 
 /* tablet */
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:768px){
 
     body{
         overflow-x: hidden;
@@ -269,6 +275,7 @@ footer {
     }
 
     .nav-links {
+        display: none;
         position: absolute;
         right: 0px;
         height: 92vh;
@@ -314,6 +321,28 @@ footer {
         margin: 5px;
         border-radius: 8px;
     }
+
+    .karusel {
+        width: 652px;
+    }
+
+    #prevBtn {
+        height: 40px;
+        position: absolute;
+        top: 30%;
+        left: 0;
+        font-size: 30px;
+        z-index: 1;
+    }
+    
+    #nextBtn {
+        height: 40px;
+        position: absolute;
+        top: 30%;
+        right: 0;
+        font-size: 30px;
+        z-index: 1;
+    }
 }
     
 .nav-active {
@@ -349,3 +378,4 @@ footer {
 .toggle .line3 {
     transform: rotate(45deg) translate(-5px, -6px);
 }
+
