--- a/css/blogs.css
+++ b/css/blogs.css
@@ -165,13 +165,15 @@ footer {
 
 /* tablet */
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:768px){
 
     body{
         overflow-x: hidden;
+        
     }
 
     .nav-links {
+        display: none;
         position: absolute;
         right: 0px;
         height: 92vh;
@@ -181,8 +183,9 @@ footer {
         flex-direction: column;
         align-items: center;
         width: 100%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in;
+        z-index: 2;
     } 
 
     .nav-links li{
@@ -191,36 +194,147 @@ footer {
 
     .burger {
         display: block;
-        cursor: pointer;
     }
 
-    .allBlogs{
+    .main {
+        width: 100%;
+        margin: 0;
+    }
+
+    fieldset {
+        margin:  30px 0 30px 0;
+    }
+
+}
+
+/*mobil */
+@media screen and (max-width:425px) {
+
+    .main {
         width: 100%;
         display: grid;
-        grid-template-columns: 1fr 1fr;
         justify-content: center;
-        
     }
 
-    .all {
+    fieldset {
+        width: 90%;
         margin: 20px;
-        width: 210px;
-        box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-        border-radius: 8px;
     }
 
-    .all img {
-        display: flex;
-        justify-content: center;
-        width: 200px;
-        height: 100px;
-        margin: 5px;
-        border-radius: 8px;
+    .forum {
+        width: auto;
     }
 }
     
 .nav-active {
     transform: translateX(0%);
+    z-index: 2;
+}
+
+.noScroll {
+    height: 100%;
+    overflow: hidden;
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}  
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}/* tablet */
+
+@media screen and (max-width:768px){
+
+    body{
+        overflow-x: hidden;
+        
+    }
+
+    .nav-links {
+        display: none;
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #FF1901;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in;
+        z-index: 2;
+    } 
+
+    .nav-links li{
+        opacity: 0;
+    }
+
+    .burger {
+        display: block;
+    }
+
+    .main {
+        width: 100%;
+        margin: 0;
+    }
+
+    fieldset {
+        margin:  30px 0 30px 0;
+    }
+
+}
+
+/*mobil */
+@media screen and (max-width:425px) {
+
+    .main {
+        width: 100%;
+    }
+
+    fieldset {
+        width: 90%;
+        margin: 20px;
+    }
+
+    .allBlogs {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .all {
+        width: 90%;
+    }
+    
+    .all img {
+        width: 240px;
+        height: 240px;
+    }
+
+    .all h2{
+        font-size: medium;
+    }
+    
+.nav-active {
+    transform: translateX(0%);
+    z-index: 2;
 }
 
 .noScroll {
