--- a/css/blogs.css
+++ b/css/blogs.css
@@ -17,7 +17,7 @@ nav {
 }
 
 .logo {
-    color: #e2e0e0;
+    color: #fcfafa;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 22px;
@@ -68,11 +68,11 @@ legend {
     color: #FF1901;
     padding-right: 20px;
 }
+
   main {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #ffffff;
     margin: 20px;
 }
 
@@ -88,6 +88,7 @@ legend {
     justify-content: center;
     
 }
+
 .all {
     margin: 20px;
     width: 510px;
