--- a/css/blogs.css
+++ b/css/blogs.css
@@ -5,7 +5,7 @@
 }
 
 html {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 nav {
@@ -17,7 +17,7 @@ nav {
 }
 
 .logo {
-    color: #fcfafa;
+    color: #fff;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 22px;
@@ -25,7 +25,7 @@ nav {
 
 .logo a {
     text-decoration: none;
-    color: #e2e0e0;
+    color: #fff;
 }
 
 .nav-links {
@@ -39,7 +39,7 @@ nav {
 }
 
 .nav-links a {
-    color: #e2e0e0;
+    color: #fff;
     text-decoration: none;
     letter-spacing: 2px;
     font-weight: bold;
@@ -52,7 +52,7 @@ nav {
 .burger div {
     width: 25px;
     height: 3px;
-    background-color: #e2e0e0;
+    background-color: #fff;
     margin: 5px;
 }
 
@@ -123,11 +123,24 @@ a {
 
 
 button {
-    width: 100px;
-    height: 25px;
-    border-bottom: none;
-    border-left: none;
-    border-radius: 8px;
+    appearance: none;
+    border-radius: 5px;
+    border: none;
+    box-sizing: border-box;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all .5s cubic-bezier(.2,0,.05,1);
+    font-family: "Titillium Web";
+    font-size: 13px;
+    line-height: 15px;
+    letter-spacing: .5px;
+    font-weight: 400;
+    font-weight: 600;
+    position: relative;
+    padding: 12px 35px 12px 15px;
 }
 
 button:hover {
