--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,7 @@
 }
 
 html {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 nav {
@@ -17,7 +17,7 @@ nav {
 }
 
 .logo {
-    color: #e2e0e0;
+    color: #fff;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 22px;
@@ -25,7 +25,7 @@ nav {
 
 .logo a {
     text-decoration: none;
-    color: #e2e0e0;
+    color: #fff;
 }
 
 .nav-links {
@@ -39,7 +39,7 @@ nav {
 }
 
 .nav-links a {
-    color: #e2e0e0;
+    color: #fff;
     text-decoration: none;
     letter-spacing: 2px;
     font-weight: bold;
@@ -52,7 +52,7 @@ nav {
 .burger div {
     width: 25px;
     height: 3px;
-    background-color: #e2e0e0;
+    background-color: #fff;
     margin: 5px;
 }
 
