--- a/css/details.css
+++ b/css/details.css
@@ -18,7 +18,7 @@ nav {
 }
 
 .logo {
-    color: #e2e0e0;
+    color: #fff;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 22px;
@@ -26,7 +26,7 @@ nav {
 
 .logo a {
     text-decoration: none;
-    color: #e2e0e0;
+    color: #fff;
 }
 
 .nav-links {
@@ -40,7 +40,7 @@ nav {
 }
 
 .nav-links a {
-    color: #e2e0e0;
+    color: #fff;
     text-decoration: none;
     letter-spacing: 2px;
     font-weight: bold;
@@ -53,7 +53,7 @@ nav {
 .burger div {
     width: 25px;
     height: 3px;
-    background-color: #e2e0e0;
+    background-color: #fff;
     margin: 5px;
     cursor: pointer;
 }
