--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 html {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 nav {
@@ -18,7 +18,7 @@ nav {
 }
 
 .logo {
-    color: #e2e0e0;
+    color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 22px;
@@ -26,7 +26,7 @@ nav {
 
 .logo a {
     text-decoration: none;
-    color: #e2e0e0;
+    color: #ffffff;
 }
 
 .nav-links {
@@ -41,7 +41,7 @@ nav {
 }
 
 .nav-links a {
-    color: #e2e0e0;
+    color: #fff;
     text-decoration: none;
     letter-spacing: 2px;
     font-weight: bold;
@@ -54,7 +54,7 @@ nav {
 .burger div {
     width: 25px;
     height: 3px;
-    background-color: #e2e0e0;
+    background-color: #fff;
     margin: 5px;
 }
 
