--- a/css/contact.css
+++ b/css/contact.css
@@ -14,10 +14,11 @@ nav {
     align-items: center;
     min-height: 8vh;
     background-color: #FF1901;
+    width: 100%;
 }
 
 .logo {
-    color: #fff;
+    color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 22px;
@@ -25,31 +26,32 @@ nav {
 
 .logo a {
     text-decoration: none;
-    color: #fff;
+    color: #ffffff;
 }
 
-.nav-links {
+.nav-list {
     display: flex;
     justify-content: space-around;
     width: 35%;
+    z-index: 2;
 }
 
-.nav-links li {
+.nav-list li {
     list-style: none;
 }
 
-.nav-links a {
+.nav-list a {
     color: #fff;
     text-decoration: none;
     letter-spacing: 2px;
     font-weight: bold;
 }
 
-.burger {
-    display: none;
+.menu {
+   display: none; 
 }
 
-.burger div {
+.menu div {
     width: 25px;
     height: 3px;
     background-color: #fff;
@@ -192,7 +194,7 @@ footer {
         
     }
 
-    .nav-links {
+    .nav-list {
         display: none;
         position: absolute;
         right: 0px;
@@ -208,11 +210,11 @@ footer {
         z-index: 2;
     } 
 
-    .nav-links li{
+    .nav-list li{
         opacity: 0;
     }
 
-    .burger {
+    .menu {
         display: block;
     }
 
@@ -267,14 +269,14 @@ footer {
     }
 }  
 
-.toggle .line1 {
+.toggle .menuLine1 {
     transform: rotate(-45deg) translate(-5px, 6px);
 }
 
-.toggle .line2 {
+.toggle .menuLine2 {
     opacity: 0;
 }
 
-.toggle .line3 {
+.toggle .menuLine3 {
     transform: rotate(45deg) translate(-5px, -6px);
 }
