--- a/css/contact.css
+++ b/css/contact.css
@@ -148,11 +148,24 @@ form > div {
 }
 
 .submit > input {
-    width: 100px;
-    height: 25px;
-    border-bottom: none;
-    border-left: none;
-    border-radius: 8px;
+    appearance: none;
+    border-radius: 5px;
+    border: none;
+    box-sizing: border-box;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all .5s cubic-bezier(.2,0,.05,1);
+    font-family: "Titillium Web";
+    font-size: 13px;
+    line-height: 15px;
+    letter-spacing: .5px;
+    font-weight: 400;
+    font-weight: 600;
+    position: relative;
+    padding: 12px 35px 12px 15px;
 }
 
 
